<resources>
    <string name="app_name">emall-ec</string>
    <string name="app_title">遥感易购</string>
    <string name="sign_up">注册</string>
    <string name="sign_up_tel">请输入手机号码</string>
    <string name="sign_up_vcode">请输入验证码</string>
    <string name="sign_up_get_vcode">获取验证码</string>
    <string name="sign_up_next_step">下一步</string>
    <string name="sign_in">登录</string>
    <string name="sign_in_by_account">账号登录</string>
    <string name="sign_in_by_tel">手机快捷登录</string>
    <string name="password">密码</string>
    <string name="set_password_hint">8-20位密码，必须包含字母和数字</string>
    <string name="confirm_password">确认密码</string>
    <string name="confirm_password_hint">再次输入密码</string>
    <string name="nickname">用户名</string>
    <string name="set_nickname_hint">1-16位用户名，必须包含字母或数字</string>
    <string name="confirm">确认</string>
    <string name="or">或</string>
    <string name="design_by">长光卫星出品</string>
    <string name="sign_in_by_account_pwd">请输入密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="my_order">我的订单</string>
    <string name="obligation">待付款</string>
    <string name="check_pending">待审核</string>
    <string name="in_production">生产中</string>
    <string name="delivered">已交付</string>
    <string name="favourite">收藏</string>
    <string name="ticket">优惠券</string>
    <string name="bill">发票管理</string>
    <string name="setting">设置</string>
    <string name="contact_us">客服</string>
    <string name="suggestion">意见反馈</string>
    <string name="enable">可使用</string>
    <string name="used">已使用</string>
    <string name="invalid">已失效</string>
    <string name="all">全部</string>
    <string name="orderId">订单号：%s</string>
    <string name="order_detail">订单详情</string>
    <string name="order_id">订单编号</string>
    <string name="order_time">下单时间</string>
    <string name="pay_method">支付方式</string>
    <string name="original_price">原价</string>
    <string name="original_price_">原价：</string>
    <string name="current_price">现价</string>
    <string name="current_price_">现价：</string>
    <string name="discount">优惠</string>
    <string name="discount_">优惠：</string>
    <string name="out_of_pocket">实付</string>
    <string name="out_of_pocket_">实付：</string>
    <string name="test_price">¥3441.00</string>
    <string name="service_time">服务时间</string>
    <string name="service_time_detail">工作日 08:30 - 17:30</string>
    <string name="service_time_detail_2">服务时间：工作日 08:30 - 17:30</string>
    <string name="fake_satellite1">1JL103B卫星 遥测信号正常</string>
    <string name="fake_satellite2">2JL103B卫星 遥测信号正常</string>
    <string name="fake_satellite3">3JL103B卫星 遥测信号正常</string>
    <string name="to_download">前往下载</string>
    <string name="delete_order">删除订单</string>
    <string name="tel_service">电话客服</string>
    <string name="qq_service">QQ客服</string>
    <string name="optics_1">光学1级</string>
    <string name="noctilucence">夜光增强</string>
    <string name="long_text">虎扑3月7日讯 2017-2018赛季C BA季后赛十进八第二场今晚继续开战，上海坐镇主场迎战北京， 首场比赛，上海客场力克北京占得先机，北京也换回此前受伤的 小外援阿隆-杰克逊，京沪大战一触即发。首节比赛，朱彦西补篮 命中，吹响北京的进攻号角，罗汉琛突破造成犯规两罚全中，上海毫不示弱，双方防守强度都很高，比赛十分激烈，北京连续飙中三分，贾斯汀-汉密尔顿内线接连得分，北京取得领先优势，吉默-弗雷戴特里突外投，上海紧追比分，蔡亮飙中三分，上海反超比分，王骁辉命中三分，还以颜色，首节战罢，双方20-20打平。次节较量，常林起飞放篮命中，罗汉琛突破上篮得手，弗雷戴特跳投命中，汉密尔顿两罚全中，双方对飙三分，比赛十分精彩，刘晓宇、阿隆杰克逊接连命中高难度三分，半场战罢，北京49-42领先。易边再战，汉密尔顿勾手命中，弗雷戴特突破命中，尼克-明纳拉斯里突外投，上海努力追分，北京外线手感火热，扩大领先优势，蔡亮连得7分，上海努力追赶，汉密尔顿单节独得18分帮助北京再度取得两位数的领先优势，三节战罢，北京79-69领先。末节比赛，蔡亮左手上篮命中，上海依然没有想到限制汉密尔顿太好的方法，让汉密尔顿在内线予取予求，弗雷戴特连续突破得分，蔡亮打成二加一又反击暴扣得手，上海不断缩小分差，杰克逊飙中三分，常林篮下强打命中，北京稳住局势，朱彦西膝盖受伤下场，杰克逊、弗雷戴特对飙三分，比赛进入白热化阶段，弗雷戴特突破造成犯规两罚全中，上海仅落后1分，关键时刻，曾文鼎两罚不中，方硕跳投命中，弗雷戴特高难度跳投命中，王骁辉横移命中高难度三分，弗雷戴特三分不中，方硕两罚稳稳命中，最终北京客场101-95力克上海，双方将回到北京迎来决战。</string>
    <string name="index_searchbar_hint">搜索卫星数据，共有5大类产品</string>
    <string name="search_searchbar_hint">输入感兴趣的地点</string>
    <string name="tel_prefix">+86</string>
    <string name="classify">分类</string>
    <string name="special">专题</string>
    <string name="video_detail_mask">当前为试看视频，可观看原始尺寸、0.92m高清画质卫星视频</string>
    <string name="example">样例</string>
    <string name="video1A_1B">视频1A+1B</string>
    <string name="time_limit">限时促销</string>
    <string name="time_limit_2">遥感数据全类型开发购买</string>
    <string name="get_ticket">领券：</string>
    <string name="service">服务：</string>
    <string name="params">参数</string>
    <string name="location">位置</string>
    <string name="buy_now">立即购买</string>
    <string name="video_detail_area">%1$s平方公里</string>
    <string name="video_detail_sale_price">¥%1$s</string>
    <string name="video_detail_original_price">¥%1$s</string>
    <string name="video_detail_cloud">%1$s%%</string>
    <string name="video_detail_location">%1$s %2$s, %3$s %4$s</string>
    <string name="video_detail_angle">%1$s°</string>
    <string name="video_detail_gather_time">%1$s 北京时间</string>
    <string name="search_program">搜索感兴趣的地点</string>
    <string name="program_toolbar">请选择拍摄时的参数</string>
    <string name="next_step">下一步</string>
    <string name="image_type">影像类型</string>
    <string name="start_time">起始时间</string>
    <string name="end_time">结束时间</string>
    <string name="done">完成</string>
    <string name="search_result">搜索结果</string>
    <string name="gather_time">采集时间</string>
    <string name="price">价格</string>
    <string name="screen">筛选</string>
    <string name="search_poi">搜索感兴趣的地点</string>
    <string name="search_poi_tv_1">支持国内任意地点搜索</string>
    <string name="search_poi_tv_2">快速定位到您感兴趣的位置</string>
    <string name="search_poi_head">找到相关地点，请选择城市</string>
    <string name="no_result">抱歉，没有找到相关地点</string>
    <string name="screen_title">分辨率/卫星</string>
    <string name="screen_1">小于1m</string>
    <string name="screen_2">小于3m</string>
    <string name="screen_3">小于8m</string>
    <string name="screen_4">小于16m</string>
    <string name="screen_5">JL101A（PMS 0.73m + 2.88m）</string>
    <string name="screen_c1">小于10%</string>
    <string name="screen_c2">小于20%</string>
    <string name="screen_c3">小于30%</string>
    <string name="screen_c4">小于40%</string>
    <string name="screen_date">年/月/日</string>
    <string name="screen_cloud">云量</string>
    <string name="screen_take">拍摄日期</string>
    <string name="reset">重置</string>
    <string name="confirm_2">确定</string>
    <string name="call">呼叫</string>
    <string name="star_journey">每日一图</string>
    <string name="scan_hint">将二维码放入框内，即可自动扫描</string>
    <string name="scan_hint_2">请登录网页端 遥感易购</string>
    <string name="scan_hint_3">http://mall.charmingglobe.com/</string>
    <string name="scan_loggin">扫码登录</string>
    <string name="scene_detail_mask">此图经过了处理，购买后或查看样例，可获得原始高清数据</string>
    <string name="classify_video">当前为试看视频</string>
    <string name="fill_order">填写订单</string>
    <string name="coupon">优惠券</string>
    <string name="invoice">我要开发票</string>
    <string name="go_pay">前往付款</string>
    <string name="choose_pay_method">请选择付款方式</string>
    <string name="wechat_pay">微信支付</string>
    <string name="to_public">对公转账</string>
    <string name="invoice_title">发票信息</string>
    <string name="select_comments">精选评论</string>
    <string name="empty_tel">手机号码不能为空</string>
    <string name="wrong_tel">请输入正确的手机号码</string>
    <string name="not_register">该手机号码未注册</string>
    <string name="empty_vcode">验证码不能为空</string>
    <string name="empty_password">密码不能为空</string>
    <string name="wrong_vcode">验证码错误</string>
    <string name="account_pwd_error">账号密码错误</string>
    <string name="modify_pwd">修改登录密码</string>
    <string name="cancel">取消</string>
    <string name="modify_password">修改登录密码</string>
    <string name="new_pwd">新密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="new_pwd_hint">8–20位密码，必须包含字母和数字</string>
    <string name="repeat_pwd">请再次输入密码</string>
    <string name="confirm_modify">确认修改</string>
    <string name="error_pwd_format">密码格式不正确</string>
    <string name="pwd_min">密码长度不得小于8位</string>
    <string name="pwd_no_match">密码不一致</string>
    <string name="pwd_max">密码长度不得大于20位</string>
    <string name="username_taken">该用户名已被使用</string>
    <string name="empty_userName">用户名不能为空</string>
    <string name="register_success">注册成功</string>
    <string name="account_privacy_setting">账号和隐私设置</string>
    <string name="clear_cache">清除缓存</string>
    <string name="no_wifi_play_noti">非Wi-Fi网络播放提醒</string>
    <string name="alert_once">提醒一次</string>
    <string name="alert_every_time">每次提醒</string>
    <string name="account_privacy_settings">账号和隐私设置</string>
    <string name="modify_tel">修改手机号码</string>
    <string name="exit">退出登录</string>
    <string name="old_tel">请输入当前绑定的手机号</string>
    <string name="new_tel">请输入新手机号</string>
    <string name="click_to_login">点击登录遥感易购</string>
    <string name="me_hint">遥感易购，发现新世界</string>
    <string name="no_order">暂无订单</string>
    <string name="contact_service">联系客服</string>
    <string name="app_title_full">长光卫星遥感易购</string>
    <string name="app_hint">遥感数据全链路电商平台</string>
    <string name="check_pwd_repeat">新密码不能和原密码相同</string>
    <string name="no_cache">0K</string>
    <string name="play_times">次播放</string>
    <string name="input_right_time">请输入正确的时间区间</string>
    <string name="my_collection">我的收藏</string>
    <string name="goods">宝贝</string>
    <string name="content">内容</string>
    <string name="invoice_hint1">1. 单笔订单只支持开具一种类型的发票</string>
    <string name="invoice_hint2">2. 增值税专用发票在支付后15-30个工作日单独寄出</string>
    <string name="invoice_hint3">3. 开票金额为用户实际支付的金额(不含礼品卡与不支持该发票类型的商品实付金额)</string>
    <string name="save">保存</string>
    <string name="programming">编程摄影</string>
    <string name="content_default">默认</string>
    <string name="video_earth">脉动地球</string>
    <string name="everyday_pic">每日一图</string>
    <string name="video_preview_title">试看视频</string>
    <string name="preview_duration">时长：31分32秒</string>
    <string name="recommand">推荐</string>
    <string name="default_ratio">0.72m</string>
    <string name="payment">付款结果</string>
    <string name="check_order">查看订单</string>
    <string name="repay">重新付款</string>
    <string name="pay_failed_hint">支付遇到问题，请重新支付</string>
    <string name="pay_failed">支付失败</string>
    <string name="pay_success">付款成功</string>
    <string name="loading">加载中</string>
    <string name="sorry_no_result">抱歉，暂无结果</string>
    <string name="delivery_login_hint">请登录网页端 遥感易购</string>
    <string name="delivery_url">http://mall.charmingglobe.com/</string>
    <string name="delivery_hint_2">进入我的订单即可下载您购买到的数据</string>
    <string name="product_delivery">产品交付</string>
    <string name="entire_invoice_hint">请填写完整的发票信息</string>
    <string name="confirm_login">授权在电脑端登录</string>
    <string name="confirm_login_title">确认登陆</string>
    <string name="login_success">登录成功</string>
    <string name="no_result_collection">抱歉，暂无结果</string>
    <string name="go_buy">去逛逛</string>
    <string name="no_internet">无网络</string>
    <string name="confirm_order">提交订单</string>
    <string name="ask">问：</string>
    <string name="answer">答：</string>
    <string name="ask1_1">筛选／搜索不到具体地理位置的卫星产品怎么办？</string>
    <string name="ask2_1">如何查看订单状态？？</string>
    <string name="ask3_1">如何开发票？</string>
    <string name="ask4_1">如何使用优惠券？</string>
    <string name="ask5_1">已收藏的卫星产品／每日一图／脉动地球在哪里可以找到？</string>
    <string name="ask6_1">如何联系你们？</string>
    <string name="answer1_1">您好，请您在首页底部的【分类】选项里选择【编程摄影】，在地图中搜索并拍摄感兴趣区域，选择拍摄时的参数，提交订单。我们将为您独家定制卫星产品，满足您的需求。</string>
    <string name="answer2_1">您好，请您在首页底部【我的】选项里选择【我的订单】，即可查看订单状态。如有问题，请到【我的】选项里选择【意见反馈】提交意见，或者在【我的】选项里选择【联系客服】，工作人员会尽快与您联系。</string>
    <string name="answer3_1">您好，请您在【填写订单】界面里选择【我要开发票】，按要求填写相关信息。单笔订单只支持开具一种类型的发票；增值税专用发票在支付后15-30个工作日单独寄出； 开票金额为实际支付金额。</string>
    <string name="answer4_1">您好，点击商品查看详情，在详情页即可领取优惠券。在【填写订单】界面里选择使用优惠券，再前往付款即可享受优惠。</string>
    <string name="answer5_1">您好，请您在首页底部【我的】选项里选择【我的收藏】，【我的收藏】包括【宝贝】和【内容】两部分，其中【宝贝】包括不同类别的卫星产品，【内容】包括【每日一图】和【脉动地球】等卫星图片和视频资讯。</string>
    <string name="answer6_1">您好，商务合作请拨打电话：0431-81785188或发送邮件至：market@charmingglobe.com。产品体验相关问题及建议请在【我的】选项里选择【意见反馈】描述您遇到的问题，或者在【我的】选项里选择【联系客服】，工作人员会尽快与您沟通。</string>
</resources>