<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF">
    <View
        android:id="@+id/ll_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/statusbar_view_height"
        android:background="#FFFFFF" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="25dp">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/sign_in_by_account_login_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:layout_centerVertical="true"
                android:text="@string/sign_up"
                android:textColor="#5F5F5F"
                android:textSize="14dp"
                android:layout_marginStart="17dp" />

            <TextView
                android:id="@+id/sign_in_by_account_close"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="17dp"
                android:layout_centerVertical="true"
                android:text="@string/close"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="17dp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/sign_in_by_account_signup_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/sign_in_by_account"
                android:textColor="#5F5F5F"
                android:textSize="18dp" />
        </RelativeLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/sign_in_by_account_title_rl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/sign_in_by_account_title_tv"
            android:layout_width="144dp"
            android:layout_height="56dp"
            android:layout_centerHorizontal="true"
            android:text="@string/app_title"
            android:textColor="#B4A078"
            android:textSize="36dp" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">
        <RelativeLayout
            android:id="@+id/sign_in_by_account_tel_rl"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/sign_in_by_account_pfx_tv"
                android:layout_width="26dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="0dp"
                android:text="@string/tel_prefix"
                android:textColor="#9B9B9B"
                android:textSize="14dp"
                android:layout_marginStart="0dp" />

            <RelativeLayout
                android:id="@+id/sign_in_by_account_cut_off_rl"
                android:layout_width="2px"
                android:layout_height="21dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="14dp"
                android:layout_toRightOf="@+id/sign_in_by_account_pfx_tv"
                android:background="#DDDDDD"
                android:layout_marginStart="14dp"
                android:layout_toEndOf="@+id/sign_in_by_account_pfx_tv" />

            <com.example.emall_core.util.view.EditTextWithDeleteButton
                android:id="@+id/sign_in_by_account_tel_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="11"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/sign_in_by_account_cut_off_rl"
                android:layout_marginLeft="13dp"
                android:background="@null"
                android:textSize="14dp"
                android:textCursorDrawable="@null"
                android:hint="@string/sign_up_tel"
                android:textColor="#9B9B9B"
                android:singleLine="true"

                android:inputType="phone"
                android:layout_toEndOf="@+id/sign_in_by_account_cut_off_rl"
                android:layout_marginStart="13dp" />
            <RelativeLayout
                android:id="@+id/sign_in_by_account_sep_rl"
                android:layout_width="300dp"
                android:layout_height="2px"
                android:layout_alignParentBottom="true"
                android:background="#F4F4F4"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sign_in_by_account_vcode_rl"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/sign_in_by_account_tel_rl"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp">
            <com.example.emall_core.util.view.EditTextWithDeleteButton
                android:id="@+id/sign_in_by_account_pwd_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="16"
                android:layout_marginLeft="0dp"
                android:layout_centerVertical="true"
                android:background="@null"
                android:textSize="14dp"
                android:textCursorDrawable="@null"
                android:hint="@string/sign_in_by_account_pwd"
                android:textColor="#9B9B9B"
                android:singleLine="true"

                android:layout_toLeftOf="@+id/sign_in_by_account_cut_off_2_rl"
                android:layout_marginEnd="14dp"
                android:layout_marginStart="0dp"
                android:layout_marginRight="14dp" />
            <RelativeLayout
                android:id="@+id/sign_in_by_account_cut_off_2_rl"
                android:layout_width="2px"
                android:layout_height="21dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/sign_in_by_account_hide_tv"
                android:layout_marginEnd="14dp"
                android:background="#DDDDDD"
                android:layout_marginRight="14dp" />
            <TextView
                android:id="@+id/sign_in_by_account_hide_tv"
                android:layout_width="21dp"
                android:layout_height="14dp"
                android:layout_centerVertical="true"
                android:layout_alignEnd="@+id/sign_in_by_account_sep_rl_2"
                android:layout_marginEnd="14dp"
                android:text="@string/hide"
                android:textSize="14dp"
                android:background="#00000000"
                android:textColor="#5F5F5F"
                tools:ignore="NotSibling"
                android:layout_alignRight="@+id/sign_in_by_account_sep_rl_2"
                android:layout_marginRight="14dp" />
            <RelativeLayout
                android:id="@+id/sign_in_by_account_sep_rl_2"
                android:layout_width="300dp"
                android:layout_height="2px"
                android:layout_alignParentBottom="true"
                android:background="#F4F4F4"/>
        </RelativeLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/sign_in_by_account_forget_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#B4A078"
            android:textSize="14dp"
            android:layout_below="@+id/sign_in_by_account_vcode_rl"
            android:layout_marginTop="11dp"
            android:text="@string/forget_password"
            android:layout_alignLeft="@+id/sign_in_by_account_vcode_rl"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/sign_in_by_account_submit_btn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="11dp"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/sign_in_by_account_forget_password_tv"
            android:textSize="14dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/sign_up_btn_shape"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/sign_in" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/sign_in_by_account_or_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="14dp"
            android:textColor="#9B9B9B"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/sign_in_by_account_submit_btn"
            android:layout_marginTop="12dp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_sign_in_by_tel_submit"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_below="@+id/sign_in_by_account_or_tv"
            android:layout_marginTop="12dp"
            android:textColor="#B4A078"
            android:textSize="14dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/sign_in_by_tel_btn_border_shape"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/sign_in_by_tel" />
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="#B5B5B5"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="14dp"
            android:text="@string/design_by"/>

    </RelativeLayout>
</LinearLayout>